<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/bottomMenu">
    <item
        android:id="@+id/airticketsFragment"
        android:icon="@drawable/frgm_ic_airtickets"
        android:title="@string/bottom_nav_airtickets"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/hotelsFragment"
        android:icon="@drawable/frgm_ic_hotels"
        android:title="@string/bottom_nav_hotels"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/simplyFragment"
        android:icon="@drawable/frgm_ic_simply"
        android:title="@string/bottom_nav_simply"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/bellFragment"
        android:icon="@drawable/frgm_ic_bell"
        android:title="@string/bottom_nav_bell"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/profileFragment"
        android:icon="@drawable/frgm_ic_profile"
        android:title="@string/bottom_nav_profile"
        app:showAsAction="ifRoom" />
</menu>